--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 
 pool:
   vmImage: windows-2019
-
+environment: 'Machine'
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
